# guppee

./: .gitignore  Dockerfile  README.md  build.sh  index.html  run.sh
.github/workflows/: docker-image.yml
Assets/Animation/: Pawn.controller
Assets/Animations/: Fishee.controller
Assets/BlendFiles/: ChessBoard.fbx  Fishee.blend  Fishee.blend1
Assets/BlendFiles/Materials/: ChessBoard-Board_Top.mat  Fishee-GoldFish.mat  Fishee-GoldFishDetails.mat  Fishee-No Name.mat  chess1-Board_Top.mat  chess1-Default.mat  chess1-No Name.mat  chess1-Reference.mat
Assets/Models/: Board.fbx  Death Animation.anim  PawnTest1.fbx  PawnTest3.controller  PawnTest3.fbx
Assets/Physx/: Bouncy.physicMaterial
Assets/Prefabs/: Fish.prefab  Pawn.prefab  Pawn2.0.prefab
Assets/Resources/Materials/: Board_Top.mat  cuube.mat  walls.mat
Assets/Scenes/: SampleScene.unity  main.unity
Assets/Scripts/: Board.cs  Chessman.cs  Pawn.cs  Piece.cs  QuadraticCurve.cs  SimpleFishBehavior.cs  Tile.cs  rotater.cs
ProjectSettings/: ProjectSettings.asset
crates/: Cargo.toml
crates/server/: Cargo.toml
crates/server/.cargo/: config.toml
crates/server/src/: actor.rs  error.rs  lib.rs  main.rs
crates/shared/: Cargo.toml
crates/shared/.cargo/: config.toml
crates/shared/src/: lib.rs  player.rs  time.rs
rust/: Cargo.toml
rust/src/: lib.rs  main.rs
server/: Cargo.toml
server/src/: actor.rs  lib.rs  ws.rs
