[workspace]
members = ["server", "shared"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.61"
tracing = "0.1.40"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
shared = { path = "shared" }
