[workspace]
members = []

[package]
name = "server"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.61"

[dependencies]
thiserror = { workspace = true }
axum = { version = "0.7.5", features = ["multipart"] }
clap = { version = "4.5.7", features = ["derive"] }
serde = { workspace = true }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["net", "rt-multi-thread", "signal"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs"] }
