[workspace]
members = []

[package]
name = "server"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.61"
tracing = "0.1.40"

[dependencies]
axum = { version = "0.7.5", features = ["multipart", "ws"] }
chrono = { version = "0.4.38", features = ["serde"] }
futures = "0.3.30"
serde = { workspace = true }
serde_json = "1.0.117"
thiserror = { workspace = true }
tokio = { version = "1.38.0", features = ["net", "rt-multi-thread", "signal"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
