[package]
name = "server"
version = { workspace =  true }
edition = { workspace =  true }

[dependencies]
axum = { version = "0.7.5", features = ["multipart", "ws"] }
chrono = { workspace = true }
futures = "0.3.30"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1.38.0", features = ["net", "rt-multi-thread", "signal"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
uuid = { workspace = true }
shared = { workspace = true }
