[package]
name = "shared"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { workspace = true }
wasm-bindgen = "0.2.92"
